--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
-docling==0.4.2
-PyPDF2==3.0.1
-python-docx==0.8.11
-sentence-transformers==2.7.0
-openai>=1.12.0
-python-dotenv>=1.0.0
+flask>=2.0.0
+gunicorn==21.2.0
+
+# Google Cloud APIs
+google-auth==2.23.3
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.1.0
+google-api-python-client==2.95.0
+
+# File handling & PDFs
+pdfplumber==0.9.0
+filetype==1.2.0
+
+# OCR & Image Processing
+pytesseract==0.3.10
+pillow==10.0.1
+pdf2image==1.16.3
+
+# Concurrent processing for faster OCR
+tqdm==4.66.1
+concurrent-log-handler==0.9.24
