--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ google-auth==2.23.3
 google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.0
 google-api-python-client==2.95.0
+google-cloud-storage==2.13.0
+oauth2client==4.1.3
 pdfplumber==0.9.0
 filetype==1.2.0
 pytesseract==0.3.10
