--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 flask>=2.0.0
 gunicorn==21.2.0
 requests==2.31.0
-google-auth==2.23.3
-google-auth-oauthlib==1.1.0
-google-auth-httplib2==0.1.0
-google-api-python-client==2.95.0
+google-auth>=2.22.0
+google-auth-oauthlib>=1.0.0
+google-auth-httplib2>=0.1.0
+google-api-python-client>=2.100.0
 google-cloud-storage==2.13.0
 oauth2client==4.1.3
 pdfplumber==0.9.0
 filetype==1.2.0
 pytesseract==0.3.10
-pillow==10.0.1
+pillow>=9.5.0
 pdf2image==1.16.3
 tqdm==4.66.1
 concurrent-log-handler==0.9.24
-scikit-learn==1.3.0
+scikit-learn-intelex
 numpy>=1.24.0
