--- a/render.yaml
+++ b/render.yaml
@@ -14,4 +14,6 @@ services:
       - key: WHATSAPP_ACCESS_TOKEN
         sync: false
       - key: WHATSAPP_BUSINESS_ACCOUNT_ID
-        sync: false 
+        sync: false
+      - key: OAUTH_REDIRECT_URI
+        value: https://docsapp-111b.onrender.com/oauth2callback 
