--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-flask==2.0.1
-werkzeug==2.0.3
+Flask==2.0.1
+Werkzeug==2.0.3
 google-auth-oauthlib==0.4.6
 google-auth==2.3.3
 google-api-python-client==2.31.0
@@ -7,3 +7,6 @@ python-dotenv==0.19.2
 requests==2.31.0
 SQLAlchemy==1.4.31
 gunicorn==21.2.0
+click>=7.1.2
+itsdangerous>=2.0
+Jinja2>=3.0
