Update OAuth redirect URI and add RAG functionality with async support

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,9 @@ DATA_DIR=/tmp/docsapp/data
 DB_DIR=/tmp/docsapp/db
 
 # OAuth Configuration
-OAUTH_REDIRECT_URI=your_oauth_redirect_uri 
+OAUTH_REDIRECT_URI=your_oauth_redirect_uri
+
+# Google Cloud Configuration
+GOOGLE_CLOUD_PROJECT=your-project-id
+GOOGLE_CLOUD_LOCATION=us-central1
+GOOGLE_APPLICATION_CREDENTIALS=path/to/your/service-account-key.json 
