--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ gunicorn==21.2.0
 click>=8.0.0
 itsdangerous>=2.0
 Jinja2>=3.0
+google-cloud-aiplatform>=1.38.0
+vertexai>=0.0.1
+async-timeout>=4.0.0
+aiohttp>=3.8.0
