--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,9 @@ services:
   - type: web
     name: docs-app
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      cp config.example.py config.py
+      pip install -r requirements.txt
     startCommand: gunicorn --worker-class aiohttp.worker.GunicornWebWorker app:app
     envVars:
       - key: PYTHON_VERSION
@@ -19,12 +21,12 @@ services:
         value: https://docsapp-20br.onrender.com/oauth2callback
       - key: GOOGLE_CLOUD_PROJECT
         sync: false
-      - key: GOOGLE_OAUTH_CLIENT_ID
-        sync: false
-      - key: GOOGLE_OAUTH_CLIENT_SECRET
-        sync: false
+      - key: GOOGLE_CLOUD_LOCATION
+        value: us-central1
       - key: GOOGLE_APPLICATION_CREDENTIALS
         value: /etc/secrets/google-credentials.json
+      - key: DEBUG
+        value: "true"
     secrets:
       - key: GOOGLE_CREDENTIALS
         name: google-credentials 
