--- a/render.yaml
+++ b/render.yaml
@@ -2,15 +2,7 @@ services:
   - type: web
     name: docs-app
     env: python
-    buildCommand: |
-      echo "Starting build process..."
-      echo "Creating config.py from example..."
-      cp -v config.example.py config.py
-      echo "Installing requirements..."
-      pip install -r requirements.txt
-      echo "Verifying config.py exists..."
-      ls -la config.py
-      echo "Build process complete."
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn --worker-class aiohttp.worker.GunicornWebWorker app:app --log-level debug
     envVars:
       - key: PYTHON_VERSION
@@ -33,8 +25,6 @@ services:
         value: /etc/secrets/google-credentials.json
       - key: DEBUG
         value: "true"
-      - key: PYTHONPATH
-        value: /app
     secrets:
       - key: GOOGLE_CREDENTIALS
         name: google-credentials 
