--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: docs-app
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --worker-class aiohttp.worker.GunicornWebWorker app:app --log-level debug
+    startCommand: gunicorn --bind 0.0.0.0:8080 --workers 4 --log-level debug app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
