--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: docs-app
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --bind 0.0.0.0:8080 --workers 4 --log-level debug app:app
+    startCommand: gunicorn --bind 0.0.0.0:8080 --workers 2 --timeout 120 --graceful-timeout 60 --max-requests 1000 --max-requests-jitter 50 --log-level debug app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
