Remove WhatsApp App Secret code and simplify webhook handling

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ WHATSAPP_API_VERSION=v17.0
 WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id
 WHATSAPP_ACCESS_TOKEN=your_access_token
 WHATSAPP_BUSINESS_ACCOUNT_ID=your_business_account_id
+WHATSAPP_VERIFY_TOKEN=your_verify_token_here
 
 # Directory Configuration
 TEMP_DIR=/tmp/docsapp
