--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Flask==2.3.3
+Flask[async]==2.3.3
 Werkzeug==2.3.7
 google-auth-oauthlib==1.0.0
 google-auth==2.23.0
@@ -14,4 +14,4 @@ google-cloud-aiplatform>=1.38.0
 vertexai>=0.0.1
 async-timeout>=4.0.0
 aiohttp>=3.8.0
-aioflask>=0.4.0
+hypercorn>=0.14.3
