--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,7 @@ services:
     startCommand: hypercorn --bind 0.0.0.0:8080 --workers 2 --keep-alive 120 --graceful-timeout 60 --access-log - --error-log - --log-level DEBUG app:app
     healthCheckPath: /health
     healthCheckTimeout: 100
+    autoDeploy: true
     prebootCommand: |
       mkdir -p /tmp/docsapp/logs /tmp/docsapp/data /tmp/docsapp/db
       python -c "
@@ -18,7 +19,7 @@ services:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: WHATSAPP_API_VERSION
-        value: v17.0
+        value: v22.0
       - key: WHATSAPP_PHONE_NUMBER_ID
         sync: false
       - key: WHATSAPP_ACCESS_TOKEN
