--- a/render.yaml
+++ b/render.yaml
@@ -8,6 +8,8 @@ services:
     healthCheckTimeout: 100
     autoDeploy: true
     prebootCommand: |
+      echo "=== Starting Preboot ==="
+      echo "Creating directories..."
       mkdir -p /tmp/docsapp/logs /tmp/docsapp/data /tmp/docsapp/db /etc/secrets
       python -c "
       import os
@@ -16,8 +18,19 @@ services:
       os.makedirs('/tmp/docsapp/db', exist_ok=True)
       os.makedirs('/etc/secrets', exist_ok=True)
       "
+      echo "Setting up credentials..."
+      echo "OAUTH_CREDENTIALS length: ${#OAUTH_CREDENTIALS}"
+      echo "Creating credentials.json..."
       echo "$OAUTH_CREDENTIALS" > /app/credentials.json
+      echo "Verifying credentials.json..."
+      ls -l /app/credentials.json
+      cat /app/credentials.json
+      echo "Setting up Google credentials..."
       echo "$GOOGLE_CREDENTIALS" > /etc/secrets/google-credentials.json
+      echo "Verifying file permissions..."
+      chmod 644 /app/credentials.json
+      chmod 644 /etc/secrets/google-credentials.json
+      echo "=== Preboot Complete ==="
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
