--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ itsdangerous>=2.0
 Jinja2>=3.0
 google-cloud-aiplatform>=1.38.0
 vertexai>=0.0.1
+google-cloud-storage>=2.14.0
+vertexai-preview>=0.0.1
 async-timeout>=4.0.0
 aiohttp>=3.8.0
 hypercorn>=0.14.3
