Update Docker configuration for improved build and deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - .:/app
       - /tmp/docsapp:/tmp/docsapp
-      - ${GOOGLE_APPLICATION_CREDENTIALS}:/app/google-credentials.json:ro
     environment:
       - WHATSAPP_API_VERSION=${WHATSAPP_API_VERSION}
       - WHATSAPP_PHONE_NUMBER_ID=${WHATSAPP_PHONE_NUMBER_ID}
@@ -16,7 +14,8 @@ services:
       - OAUTH_REDIRECT_URI=${OAUTH_REDIRECT_URI}
       - GOOGLE_CLOUD_PROJECT=${GOOGLE_CLOUD_PROJECT}
       - GOOGLE_CLOUD_LOCATION=${GOOGLE_CLOUD_LOCATION}
-      - GOOGLE_APPLICATION_CREDENTIALS=/app/google-credentials.json
+      - GOOGLE_APPLICATION_CREDENTIALS=/etc/secrets/google-credentials.json
+      - OAUTH_CREDENTIALS=${OAUTH_CREDENTIALS}
       - TEMP_DIR=/tmp/docsapp
       - LOGS_DIR=/tmp/docsapp/logs
       - DATA_DIR=/tmp/docsapp/data
