--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask[async]==2.3.3
 Werkzeug==2.3.7
-google-auth-oauthlib==1.0.0
-google-auth==2.23.0
+google-auth-oauthlib==1.1.0
+google-auth==2.26.1
 google-api-python-client==2.100.0
 python-dotenv==1.0.0
 requests==2.31.0
@@ -10,10 +10,8 @@ gunicorn==21.2.0
 click>=8.0.0
 itsdangerous>=2.0
 Jinja2>=3.0
-google-cloud-aiplatform>=1.38.0
-vertexai>=0.0.1
-google-cloud-storage>=2.14.0
-vertexai-preview>=0.0.1
+google-cloud-aiplatform==1.35.0
+google-cloud-storage==2.14.0
 async-timeout>=4.0.0
 aiohttp>=3.8.0
 hypercorn>=0.14.3
