--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,11 @@ gunicorn==21.2.0
 click>=8.0.0
 itsdangerous>=2.0
 Jinja2>=3.0
-google-cloud-aiplatform==1.35.0
+google-cloud-aiplatform>=1.38.0
 google-cloud-storage==2.14.0
 google-cloud-documentai==2.20.1
 async-timeout>=4.0.0
 aiohttp>=3.8.0
 hypercorn>=0.14.3
 PyPDF2>=3.0.0
+vertexai>=0.0.1
