--- a/render.yaml
+++ b/render.yaml
@@ -117,10 +117,7 @@ services:
           type: postgres
           property: connectionString
       - key: REDIS_URL
-        fromService:
-          name: docsapp-redis
-          type: redis
-          property: connectionString
+        value: "redis://red-cv9vcatumphs73ac0uag:6379"
     secrets:
       - key: GOOGLE_CREDENTIALS
         name: google-credentials
